### March xx 2021, Release version 0.11.0 ###

  * ADDED:
    * a new numpad has been introduced.
    * a new keyboard has been introduced.
    * a new widget has been introduced.
    * a json file dedicated to sensors has been added.
    * a window and a dictionary to manage mqtt based sensors have been added.
    * a window and a dictionary to manage 1wire based sensors have been added.
    * specific threads have been added for testing purpose.

  * MODIFIED:
    * mqtt thread has been modified to handle new mqtt based sensors.
    * ds18b20 and bme280 threads has been modified to handle current 1wire based sensors and future bme280 sensors.

  * FIXED:
    * few corrections to make the weather station works on raspberry pi.

### March 5 2021, Release version 0.10.1 ###

  * FIXED:
    * fixed an issue with the update system.

  * ADDED:
    * logging messages have been added in the update system.


### March 5 2021, Release version 0.10.0 ###

  * ADDED:
    * OpenWeather has been added as a weather forecast provider.
    * a new version of the option window has been introduced.
    * meteofrance api and openweather api versions have been added to log.

  * MODIFIED:
    * Openweather has been integrated in all widgets.
    * stylesheet has been tweaked in option window.


### March 2 2021, Release version 0.9.3 ###

  * ADDED:
    * a function to sync graphic materials has been added (to avoid icons and stylesheet issues).

  * FIXED:
    * fixed an issue with paho mqtt disconnect callback.
    * if battery and/or signal values are None, it leads to an exception, it has been fixed.
    * if a sensor is not detected, the corresponding thread is stopped.
    * fixed an issue with the display of min max temperature.


### March 1 2021, Release version 0.9.2 ###

  * ADDED:
    * a function to test postgresql server, database and tables has been added.

  * MODIFIED:
    * time series are plotted only if a connection to the database is successful.